--- a/restaurant_menu/templates/menu_item_detail.html
+++ b/restaurant_menu/templates/menu_item_detail.html
@@ -1,6 +1,8 @@
 <html>
     <head></head>
     <body>
-        <h1>Menu Item</h1>
+        <h1>{{ item.meal }}</h1>
+        <p>{{ item.description }}</p>
+        <p>{{ item.price }}</p>
     </body>
 </html>
