--- a/restaurant_menu/templates/menu_item_detail.html
+++ b/restaurant_menu/templates/menu_item_detail.html
@@ -1,8 +1,8 @@
-<html>
-    <head></head>
-    <body>
-        <h1>{{ item.meal }}</h1>
+{% extends 'base.html' %}
+{% block content %}
+    <div class="container">
+        <h1 class="pt-5">{{ item.meal }}</h1>
         <p>{{ item.description }}</p>
         <p>{{ item.price }}</p>
-    </body>
-</html>
+    </div>
+{% endblock content %}
